Remove unnecessary boxing / unboxing